--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/preset-react": "^7.26.3",
     "@clerk/nextjs": "^5.7.5",
+    "@supabase/supabase-js": "^2.48.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
