--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@babel/preset-react": "^7.26.3",
     "@clerk/nextjs": "^5.7.5",
     "@supabase/supabase-js": "^2.48.0",
+    "framer-motion": "^12.0.5",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-toastify": "^11.0.3",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
